# 3.01.13 (48236) Jan 25, 2011
1/25/11 Publishing to dev with mods that were requested for interviews
molecules-and-light: Made the spectrum diagram wider (so the word "Ultraviolet" will fit) and shorter.
molecules-and-light: Modified the energy arrow to be solid, smaller, and have the caption beneath it.
# 3.01.12 (48153) Jan 21, 2011
1/21/11 Deploying to dev for review of changes to M&L simulation
Replaced the energy arrows with a single arrow that looks like the one on the sketch of the spectrum node.
Slowed the rotation rate of the molecules so that microwaves don't appear to impart more energy than IR or other photons.
Replaced EM spectrum drawing with new, home-grown version.  This is intended for obtaining feedback, and will be replaced by translatable version once agreed upon.
Added first attempt at a dialog for showing the EM spectrum and a button on the M&L canvas for bringing it up. 
Modified photons and the control panel background in order to make the photons more visible.
Fixed an issue where the edges of the UV photon were being cut off.
# 3.01.11 (47962) Jan 14, 2011
1/14/11 Deploying to dev with slower photon emssion rate for interview testing.
Slowed down the max photon emission rate to about half of what it had been.
Removed spectrum from M&L control panel, did other layout changes.
# 3.02.00 (47704) Jan 5, 2011
# 3.01.10 (47703) Jan 5, 2011
> Made thermometer graphic remain a fixed size, see #2647
> Fixed: thermometer fluid level depends on screen size but not thermometer size, see #2647
# 3.01.09 (47694) Jan 5, 2011
1/5/11 Publishing a version to dev for review of a bug fix, see #2641.
Fixed a bug where invisible photons were not getting reflected by ice on the earth, see #2641.
Added commented-out implementation of model-based ice/photon collisions
Reverted changes from 47665, did not seem to relate to the problem
# 3.01.09 (47667) Jan 4, 2011
Fixes for #2641
-Override PhotonGraphic.paint to respect visibility flag