@@ -1,0 +1,89 @@
+/* Copyright 2008, University of Colorado */
+
+package edu.colorado.phet.greenhouse.view;
+
+import java.awt.Color;
+import java.awt.Dimension;
+import java.awt.Font;
+import java.awt.Frame;
+import java.awt.GridBagConstraints;
+import java.awt.Insets;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
+
+import javax.swing.BorderFactory;
+import javax.swing.JButton;
+import javax.swing.JPanel;
+
+import edu.colorado.phet.buildanatom.BuildAnAtomConstants;
+import edu.colorado.phet.common.phetcommon.application.PaintImmediateDialog;
+import edu.colorado.phet.common.phetcommon.view.util.EasyGridBagLayout;
+import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
+import edu.umd.cs.piccolo.PCanvas;
+
+
+/**
+ * This class defines a dialog window that shows a representation of the
+ * electromagnetic spectrum.
+ *
+ */
+public class SpectrumDialog extends PaintImmediateDialog {
+
+    //----------------------------------------------------------------------------
+    // Class Data
+    //----------------------------------------------------------------------------
+    private static final Font LABEL_FONT = new PhetFont(12);
+
+    //----------------------------------------------------------------------------
+    // Constructors
+    //----------------------------------------------------------------------------
+
+    /**
+     * Sole constructor.
+     *
+     * @param owner
+     */
+    public SpectrumDialog( Frame parentFrame ) {
+        super( parentFrame, true );
+
+        // Don't let the user resize this window.
+        setResizable( false );
+
+        // Create the panel that will contain the canvas and close button.
+        JPanel mainPanel = new JPanel();
+        mainPanel.setBorder( BorderFactory.createEmptyBorder( 15, 15, 15, 15 ) ); // top, left, bottom, right
+        EasyGridBagLayout layout = new EasyGridBagLayout( mainPanel );
+        layout.setInsets( new Insets( 10, 0, 10, 0 ) ); // top, left, bottom, right
+        layout.setAnchor( GridBagConstraints.CENTER );
+        mainPanel.setLayout( layout );
+
+        // Create the canvas.
+        PCanvas canvas = new PCanvas();
+        canvas.setBackground( Color.BLACK );
+        canvas.setPreferredSize( new Dimension( 600, 400 ) );
+        canvas.setBorder( BorderFactory.createEtchedBorder() ); // top, left, bottom, right
+        mainPanel.add( canvas );
+
+        // Add the close button.
+        // TODO: i18n
+        JButton closeButton = new JButton("Close");
+        closeButton.addActionListener( new ActionListener(){
+            public void actionPerformed(ActionEvent event){
+                SpectrumDialog.this.dispose();
+            }
+        });
+        layout.addComponent( closeButton, 2, 0 );
+
+        // Add to the dialog
+        getContentPane().add( mainPanel );
+        pack();
+    }
+
+    @Override
+    public void setVisible( boolean visible ) {
+        super.setVisible( visible );
+        if ( visible ) {
+            pack(); // pack after making visible because this dialog contains a JTextArea
+        }
+    }
+}
