@@ -1,3 +1,4 @@
+molecules-and-light: Added new version of SpectrumDialog with the infrastructure in place to create a Piccolo-based version of the spectrum node (so that it can be translated).
 # 3.01.13 (48236) Jan 25, 2011
 1/25/11 Publishing to dev with mods that were requested for interviews
 molecules-and-light: Made the spectrum diagram wider (so the word "Ultraviolet" will fit) and shorter.
